[project]
name = "graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "neo4j>=6.0.2",
    "openai>=2.6.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "streamlit>=1.50.0",
]
